Edits to case study paper

--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -56,7 +56,7 @@ We consider two types of LRPs based on two different metrics:
 
 We propose that proportional LRPs are more appropriate for Pacific salmon SMUs in order to align with DFO's WSP; however, aggregate abundance LRP methods may be added to meet specific fisheries management requirements. 
 
-We implement proportional LRP’s using approaches developed to assess CU status under DFO's WSP [@dfoCanadaPolicyConservation2005; @holtIndicatorsStatusBenchmarks2009] and implemented for a subset of priority CUs [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @grant2017FraserSockeye2020]. These approaches use multiple metrics to evaluate status including trends in abundance and abundance metrics, and an expert driven integration approach to combine statuses across metrics into a single status for each CU. In our case study applications, we rely on the recently developed Pacific Salmon Status Scanner tool (hereafter referred to as the 'Salmon Scanner'; Pestal et al., in prep^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.]) as a way to rapidly approximate more detailed WSP status assessments. The Salmon Scanner allows us to rapidly generate up-to-date estimates of integrated CU status for all of our case study applications, and is recommended as an approach for defining LRPs in our companion working paper (Holt et al., in review).
+We implement proportional LRP’s using approaches developed to assess CU status under DFO's WSP [@dfoCanadaPolicyConservation2005; @holtIndicatorsStatusBenchmarks2009] and implemented for a subset of priority CUs [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @grant2017FraserSockeye2020]. These approaches use multiple metrics to evaluate status including trends in abundance and abundance metrics, and an expert driven integration approach to combine statuses across metrics into a single status for each CU. In our case study applications, we apply the recently developed Pacific Salmon Status Scanner tool (hereafter referred to as the 'Salmon Scanner'; Pestal et al., in prep^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.]) as a way to rapidly approximate more detailed WSP status assessments. The Salmon Scanner allows us to rapidly generate up-to-date estimates of integrated CU status for all of our case study applications, and is recommended as an approach for defining LRPs in our companion working paper (Holt et al., in review).
 
 When developing aggregate abundance LRP options, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above their Red status zone. For these LRPs, estimates of CU status are approximated based on a comparison of spawning abundance to a single lower benchmark for each CU. Exceptions are described in the application to case studies. <!--KH: remobing as it seems too repatative.  A variety of methods are available to estimate lower benchmarks on abundances depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020], as described in Holt et al. (in review). -->
 
@@ -66,7 +66,10 @@ Also - I have not yet responded to this comment from Chuck:
 "what happens with sites where pni cannot be measured because data are not collected or insufficient.  E.g. is sufficient to collect a brood stock sample of 40 fish at the same time and location where the broodstock have been collected for the last 40 years and assume that is a random sample for the population.  ?  we often see different mark rates in the brood stock samples compared to the river spawners.  We also know that the hatchery programs seldom collect a random sample, as many hatchery staff pick big females and avoid collecting jack males."
 -->
 
-We also maintain consistency with the WSP by only including spawning streams without significant enhancement when evaluating CU and SMU status. We use the Proportionate Natural Influence metric, PNI,as a basis for defining 'significant enhancement'. PNI is a metric of the genetic risk of hatcheries on natural populations. Values less than 0.5 indicate populations where most fish are hatchery origin [classified as integrated-hatchery populations; @withlerGeneticallyBasedTargets2018]. We defined 'significant enhancement' as PNI values < 0.5 and excluded spawning streams with PNI estimated or assumed to be < 0.5 from case study analyses. Systems with levels of PNI > 0.5 can still have hatchery influences; however, dynamics are predominately natural origin. <!--KH: suggesting removal for simplification: PNI values $\geqslant$ 0.5 and < 0.72 indicate populations where natural-origin fish predominate (integrated-transition populations), and values $\geqslant$ 0.72 indicate populations where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [integrated-wild populations; @dfoCanadaPolicyConservation2005; @withlerGeneticallyBasedTargets2018]. Fully wild populations are those that not have hatchery programs, and for which strays from out-of-basin hatchery production are limited to <3% per year [@withlerGeneticallyBasedTargets2018].--> Where time-series of the proportion of hatchery marked fish on the spawning grounds are available (e.g., Interior Fraser Coho case study), these proportions are used to inform assessments in two ways: first to develop time-series of natural-origin recruitment for benchmark estimation based on stock-recruitment relationships and second to develop time series of natural-origin spawners for status assessment against benchmarks.  When reliable time-series of the proportion of hatchery influence are not available (WCVI Chinook), total spawners are used for LRP analyses provided that the threshold of assumed PNI > 0.5 has been met.     
+We also maintain consistency with the WSP by only including spawning streams without significant enhancement when evaluating CU and SMU status. We use the Proportionate Natural Influence metric, PNI,as a basis for defining 'significant enhancement'. PNI is a metric of the genetic risk of hatcheries on natural populations. Values less than 0.5 indicate populations where most fish are hatchery origin [classified as integrated-hatchery populations; @withlerGeneticallyBasedTargets2018]. We defined 'significant enhancement' as PNI values < 0.5 and excluded spawning streams with PNI estimated or assumed to be < 0.5 from case study analyses. 
+
+
+Systems with levels of PNI > 0.5 can still have hatchery influences; however, dynamics are predominately natural origin. <!--KH: suggesting removal for simplification: PNI values $\geqslant$ 0.5 and < 0.72 indicate populations where natural-origin fish predominate (integrated-transition populations), and values $\geqslant$ 0.72 indicate populations where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [integrated-wild populations; @dfoCanadaPolicyConservation2005; @withlerGeneticallyBasedTargets2018]. Fully wild populations are those that not have hatchery programs, and for which strays from out-of-basin hatchery production are limited to <3% per year [@withlerGeneticallyBasedTargets2018].--> Where time-series of the proportion of hatchery marked fish on the spawning grounds are available (e.g., Interior Fraser Coho case study), these proportions are used to inform assessments in two ways: first to develop time-series of natural-origin recruitment for benchmark estimation based on stock-recruitment relationships and second to develop time series of natural-origin spawners for status assessment against benchmarks.  When reliable time-series of the proportion of hatchery influence are not available (WCVI Chinook), total spawners are used for LRP analyses provided that the threshold of assumed PNI > 0.5 has been met.     
 
 More detailed descriptions of LRP estimation methods are provided in the following sections, while guidance on when and how proportional and aggregate abundance LRPs should be applied is provided in Holt et al. (in review). We recommend that users consult Holt et al. (in review) before applying any of the methods described in this case study paper.
 
@@ -74,9 +77,9 @@ More detailed descriptions of LRP estimation methods are provided in the followi
 
 ## PROPORTIONAL LRPS
 
-A proportional LRP was set as 100% of CUs above their red Red status zone. The LRP therefore acts as a trigger that is breached when one or more CUs in an SMU is assessed as having Red status. Rationale for this choice of 100% of CUs required to be above Red status is described in Holt et al. (in review)<!--KH: footnote already cited; subscript needs to be added at a later point-->.
+A proportional LRP was set as 100% of CUs above their red Red status zone. The LRP therefore acts as a trigger that is breached when one or more CUs in an SMU is assessed as having Red status. Rationale for this choice of 100% of CUs required to be above Red status is described in Holt et al. (in review).
 
-We compare three different methods of assessing CU status when using proportional LRPs: (i) the proportion of CUs with a recent WSP status assessment above the Red zone (e.g., @grant2017FraserSockeye2020), (ii) the proportion of CUs with a recent Salmon Scanner status assessment above Red (see below for more details), and (iii) the proportion of CUs with status estimated to be below a single CU lower benchmark (e.g., S\textsubscript{gen}, percentile-based benchmarks, etc.). We recommend applying methods (i) or (ii), and compare these with approach (iii).
+We compare three different methods of assessing CU status when using proportional LRPs: (i) the proportion of CUs with a recent WSP status assessment above the Red zone (e.g., @grant2017FraserSockeye2020), (ii) the proportion of CUs with a recent Salmon Scanner status assessment above Red (see below for more details), and (iii) the proportion of CUs with status estimated to be below a single CU lower benchmark (e.g., S~gen~, percentile-based benchmarks, etc.). We recommend applying methods (i) or (ii), and compare these with approach (iii).
 
 When assessing CU status relative to a single abundance-based lower benchmark in approach (iii), we compare generational mean spawner abundances to the benchmark. The use of generational means is consistent with the approach taken for abundance-based benchmarks in WSP assessments and the Salmon Scanner tool (approaches i and ii). A generational mean integrates status over cohorts within a generation, which are generally independent of each other because of the anadromous, semelparous life-history of Pacific salmon and the dominance of a single age-at-maturity for many stocks [@holtIndicatorsStatusBenchmarks2009; @porsztReliabilityIndicatorsDecline2012]. As a result, generational smoothing reduces reduces noise in annual CU status determination arising from both interannual variability in CU abundances from different cohorts and annual observation error in estimated spawner abundances.
 
@@ -95,6 +98,9 @@ Luke and Carrie - if either of you has access to the full Pestal et al. report t
 
 -->
 
+For absolute or relative abundance metrics, the Salmon Scanner uses the most recent generational mean spawner abundance (calculated as a running geometric mean) to compare to benchmarks, including absolute abundance thresholds (e.g., 1500 spawners), abundance-based lower benchmarks (e.g., S~gen~ or percentile), and abundance-based upper benchmarks (e.g., 0.8S~MSY~ or percentile). Generational mean spawner abundances as also used when calculating trends in spawner abundances over time (Pestal et al., in prep.)<!--KH: footnote already cited; subscript needs to be added at a later point-->.
+
+
 
 \newpage
 \begin{landscape}
@@ -105,16 +111,17 @@ knitr::include_graphics("figure/decision_tree.png")
 \end{landscape}
 
 
-For absolute or relative abundance metrics, the Salmon Scanner uses the most recent generational mean spawner abundance (calculated as a running geometric mean) to compare to benchmarks, including absolute abundance thresholds (e.g., 1500 spawners), abundance-based lower benchmarks (e.g., S~gen~ or percentile), and abundance-based upper benchmarks (e.g., 0.8S~MSY~ or percentile). Generational mean spawner abundances as also used when calculating trends in spawner abundances over time (Pestal et al., in prep.)<!--KH: footnote already cited; subscript needs to be added at a later point-->.
-
 ## AGGREGATE ABUNDANCE LRPS{#aggAbundMethods}
 
 Aggregate abundance LRPs are based on the assumption that there is a predictable relationship between SMU-level abundance and the probability that all CUs will be above Red status. When estimating aggregate abundance LRPs, status relative to a single lower benchmark (LBM) is used a proxy for status above the Red zone. Aggregate abundance LRPs are then estimated by using the predicted relationship to find the SMU-level abundance at which there is a set probability that 100% of CUs (the same proportion that was used for proportional LRPs) will be above the LBM that has been selected to represent CU status. 
 
-The above definition of aggregate abundance LRPs requires a decision to be made about the required probability that 100% of CUs will be above their LBMs. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their LBMs as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance LRPs is included in (Holt et al. in review)<!--KH: footnote already cited; subscript needs to be added at a later point-->.
+The above definition of aggregate abundance LRPs requires a decision to be made about the required probability that 100% of CUs will be above their LBMs. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their LBMs as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance LRPs is included in (Holt et al. in review).
  
  
-We consider two types of aggregate abundance LRPs in our case studies: logistic regression LRPs and projection LRPs. These two methods differ in the approach taken to estimate the underlying relationship between SMU-level aggregate abundance and the probability that all CUs will be above their LBMs. Logistic regression LRPs are estimated by fitting statistical models to historical data to estimate this relationship. In this case, LRPs are based on previously observed covariation in CU status, and thus implicitly assume the past is a reasonable approximation of the future. In comparison, projection LRPs use historical data as a basis for quantifying population dynamics, and then project population dynamics forward in time using stochastic simulations. Simulation outputs are then used to characterize the underlying relationship between aggregate abundance and the probability that all CUs will be above their LBMs. This approach allows uncertainty in current (or future) processes that might affect the probability that all CUs will be above their LBMs at a given level of aggregate abundance to be accounted for through alternative scenarios.  For example, if there is evidence of very recent changes in covariation among CUs, possibly due to a subset of CUs experiencing reduced productivity, this hypothesis can be modelled in forward projections. In comparison, logistic regression LRPs would be limited to using historically observed data, which may not include enough observations of the new and emerging covartation structure. 
+We consider two types of aggregate abundance LRPs in our case studies: logistic regression LRPs and projection LRPs. These two methods differ in the approach taken to estimate the underlying relationship between SMU-level aggregate abundance and the probability that all CUs will be above their LBMs. Logistic regression LRPs are estimated by fitting statistical models to historical data to estimate this relationship. In this case, LRPs are based on previously observed covariation in CU status, and thus implicitly assume the past is a reasonable approximation of the future. In comparison, projection LRPs use historical data as a basis for quantifying population dynamics, and then project population dynamics forward in time using stochastic simulations. Simulation outputs are then used to characterize the underlying relationship between aggregate abundance and the probability that all CUs will be above their LBMs. 
+
+
+The projection LRP approach allows uncertainty in current (or future) processes that might affect estimation of the LRP to be accounted for through alternative scenarios. For example, if there is evidence of recent changes in covariation among CUs, possibly due to a subset of CUs experiencing reduced productivity, this hypothesis can be modelled in forward projections. In comparison, logistic regression LRPs would be limited to using historically observed data, which may not include enough observations of the new and emerging covaration structure. 
 
 
 Within both the logistic regression and projection LRP estimation routines, we characterize annual CU status using a single metric, spawner abundances relative to a LBM, instead of using the rapid status estimate resulting from application of the decision tree within the Salmon Scanner tool (e.g., Red, Amber, Green). While in theory, estimates of rapid CU status from the Salmon Scanner tool could have been used within the logistic regression LRP approach, we found little evidence of a statistical relationship between rapid status and aggregate spawner abundances for the one case study where we considered this approach, Interior Fraser Coho. We provide further discussion of this result within the Interior Fraser Coho case study section of this paper. In addition, projection LRPs are derived from an equilibrium model that does not incorporate temporal dynamics required for assessment of trends in the Salmon Scanner Tool. As a result, we rely on status estimated from a single LBM (e.g., S~gen~) rather than the rapid status estimates from the Salmon Scanner decision tree to develop aggregate abundance LRPs in our case studies. While estimates of CU status relative to a single LBM such as S~gen~ is a readily available output from the Salmon Scanner tool, we calculated these metrics external to the tool for our case studies.
@@ -126,14 +133,14 @@ When assessing CU status for the purpose of estimating aggregate abundance LRPs,
 However, when assessing SMU status, we used generational running averages (geometric average) of aggregate spawner abundances. This approach reduced variability in annual decisions about whether an LRP had been breached arising from variability in cohorts within a generation.  The decision to use generational averages of aggregate spawner abundances when determining whether an LRP is breached is consistent with the approach used for proportional LRPs. In both cases, the underlying metric being used to determine SMU status (either aggregate abundance or CU-level status of component CUs for the proportional approach) is based on generational-averaged values in order to reduce annual variability in status related to cyclic recruitment dynamics within a generation.
 
 
-### Logistic regression LRPs{#logisticMethods}
+### Logistic regression LRPs{#logisticMethods}  
+
 
 <!--Brendan's comment ( on previous text regarding the potential use of multidimensional status -- this is before we ran the logistic regression on multidimensionalstatuses and fount that it wasn't a good idea). 
   "I am not sure I follow this as written. Why would you compare multidimensional CU status to aggregate spawner abundance to assess whether  “estimates of CU status used in the logistic regression could come from the rapid multidimensional scanning tool”? And I would have thought the multidimensional scanning tool and just using a single lower benchmark (Sgen) would give the same answer, especially since it is conditioned on the IFR coho integrated assessments!? If not this is a bit concerning."
   CW: I believe we address his concerns by explaining why the multidimensional status tool would give different results in terms of logistic regression LRPs. 
 -->
-
-Logistic regression LRPs (also called logistic regression LRPs) are derived from an empirically estimated relationship between CU-level status and aggregate SMU abundance. Using this approach, the LRP represents the aggregate abundance level that has historically been associated with a given probability of 100% of CUs having status above a selected LBM. For each year of observed data, CU-level status is quantified as a Bernoulli variable: 1 (success) = all CUs have estimated status greater than their LBM and 0 (failure) = all CUs did not have status > LBM. A logistic regression is then fit to these outcomes to predict the probability that all CUs will have status > LBM as a function of aggregate SMU spawner abundance using the logistic regression equation:
+Logistic regression LRPs (also called logistic regression LRPs) are derived from an empirically estimated relationship between CU-level status and aggregate SMU abundance. Using this approach, the LRP represents the aggregate abundance level that has historically been associated with a given probability of 100% of CUs having status above a selected LBM. For each year of observed data, CU-level status is quantified as a Bernoulli variable: 1 (success) = all CUs have estimated status greater than their LBM and 0 (failure) = all CUs do not have status > LBM. A logistic regression is then fit to these outcomes to predict the probability that all CUs will have status > LBM as a function of aggregate SMU spawner abundance using the logistic regression equation:
 
 \begin{equation}
   \log(\frac{p}{1-p}) = B_0 + B_1 \sum_{i}^{i=nCUs} S_{i,t}
@@ -158,7 +165,8 @@ We initially considered an alternative approach to logistic regression in which 
 The logistic regression model was implemented in TMB [@kristensenTMBAutomaticDifferentiation2016]. The model was statistically integrated, which means that both the CU-specific lower benchmarks (S~gen~) and the SMU logistic regression parameters were estimated within the same statistical model. The integrated approach allowed for the propagation of uncertainty in parameter estimates from the CU level to the SMU level, resulting in uncertainty intervals that better capture uncertainty in benchmarks as well as the logistic model fit.  
 
 
-##### Logistic Regression Model Diagnostics
+##### Logistic Regression Model Diagnostics  
+
 
 There are several assumptions associated with logistic regression, three of which are relevant for our application to LRPs and are listed below. Model diagnostics were applied to evaluate the extent to which those assumptions were met, as well as statistical significance of model coefficients, goodness-of-fit, and classification accuracy of LRPs developed from the logistic regression. The three assumptions are as follows:
 
@@ -227,16 +235,17 @@ In addition, the pseudo-$R^2$ was calculated to indicate the ratio of the model 
 
 where $d_0$ are the deviance residuals for the null model. The pseudo-$R^2$ is a measure of the strength of the relationship between aggregate abundances and probability of all CUs being above their lower benchmarks. Unlike $R^2$ values for linear models, the pseudo-$R^2$ does not represent the percentage of variance explained by the model and is not related to the correlation coefficient.
 
-In addition, the length of available time-series will impact the power to detect significant model coefficients, and coefficient estimates may be biased when time-series are short.  @peduzziSimulationStudyNumber1996 recommend a minimum of 10 data points for the least frequent outcome to avoid biases in model coefficients, based on simulation study of epidemiological data. For example, if the frequency of outcomes were 0.5 and 0.5 (for 0 and 1, respectively), then a sample size of at least 10/0.5 = 20 would be sufficient, and this minimum sample size would be higher if the data were skewed, e.g., if frequency of outcomes were 0.7 and 0.3, the minimum sample size would be 10/0.3 = 33. A similar evaluation of sample sizes to minimize biases in logistic regression LRPs for fisheries applications is warranted. Although it is possible to estimate LRPs with lower sample sizes, the risks of biases in model parameters (and LRPs) increases.
+In addition, the length of available time-series will impact the power to detect significant model coefficients. Coefficient estimates may be biased when time-series are short.  @peduzziSimulationStudyNumber1996 recommend a minimum of 10 data points for the least frequent outcome to avoid biases in model coefficients, based on simulation study of epidemiological data. For example, if the frequency of outcomes were 0.5 and 0.5 (for 0 and 1, respectively), then a sample size of at least 10/0.5 = 20 would be sufficient.  This minimum sample size would be higher if the data were skewed, e.g., if frequency of outcomes were 0.7 and 0.3, the minimum sample size would be 10/0.3 = 33. A similar evaluation of sample sizes to minimize biases in logistic regression LRPs for fisheries applications is warranted. Although it is possible to estimate LRPs with lower sample sizes, the risks of biases in model parameters (and LRPs) increases.  We calculate minimum sample sizes for our case studies using the approach of  @peduzziSimulationStudyNumber1996.
+
 
 **Classification accuracy of LRPs**
 
-Classification accuracy was evaluated based on the ratio of successful classifications to total number of data points in the logistic regression, also called the hit ratio. Successful classifications were the number of years when the model successfully predicted that all CUs were above their lower benchmark plus the number years when the model successfully predicted that at least one CU was below its lower benchmark.  The hit ratio tends to be biased towards optimistic classification rates when computed with the same sample used for fitting the logistic model. Therefore, we also considered an out-of-sample approach to classification accuracy, where the logistic regression was estimated iteratively removing a single data point and the occurrence of successes relative to observations were based on the model that did not contain that data point. 
+Classification accuracy was evaluated based on the ratio of successful classifications to total number of data points in the logistic regression, also called the hit ratio. Successful classifications were the number of years when the model successfully predicted that all CUs were above their lower benchmark plus the number years when the model successfully predicted that at least one CU was below its lower benchmark. The hit ratio tends to be biased towards optimistic classification rates when computed with the same sample used for fitting the logistic model. Therefore, we also considered an out-of-sample approach to classification accuracy, where the logistic regression was estimated iteratively removing a single data point and the occurrence of successes relative to observations were based on the model that did not contain that data point. 
 
 
 ### PROJECTION LRPS{#projectedMethods}
 
-Projection LRPs are estimated using simulated CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g., S~gen~). Parameters describing CU-level population dynamics are estimated from available data, and then individual CUs are projected forward under current exploitation rates (with sensitivity analyses used to explore alternative exploitation rates). This approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect a lack of biological and/or fisheries information.  Natural variability in recruitment and ages-at-maturity are incorporated into forward projections, as is implementation uncertainty in exploitation rates. Projections are run for 30 years after an initialization period to identify aggregate abundances characterized by an equilibrium state represented by stable distribution of projected abundances. These projections are not meant to interpreted as predictions of future abundance; rather, they are used to simulate the underlying relationship between SMU-level abundance and the probability that all CUs will be above their LBMs.  As with logistic regression LRPs, we relied on status estimated from a single metric rather than the rapid status estimates from the Salmon Scanner tool to develop LRPs.
+Projection LRPs are estimated using simulated CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g., S~gen~). Parameters describing CU-level population dynamics are estimated from available data, and then individual CUs are projected forward under current exploitation rates (with sensitivity analyses used to explore alternative exploitation rates). This approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect a lack of biological and/or fisheries information.  Natural variability in recruitment and ages-at-maturity are incorporated into forward projections, as is implementation uncertainty in exploitation rates. Projections are run for 30 years after an initialization period to identify aggregate abundances characterized by an equilibrium state represented by stable distribution of projected abundances. These projections should not be interpreted as predictions of future abundance; rather, they are used to simulate the underlying relationship between SMU-level abundance and the probability that all CUs will be above their LBMs. As with logistic regression LRPs, we relied on status estimated from a single metric rather than the rapid status estimates from the Salmon Scanner tool to develop LRPs.
 
 
 We used the samSim closed loop simulation modelling tool to conduct stochastic projections for our case study applications. samSim is an R package that was developed to quantify recovery potential for Pacific salmon populations [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020]. We created a modified version of samSim to support LRP estimation. The LRP version of samSim is described in detail in Appendix \@ref(app:samsim-appendix), and model code is available on GitHub (see Appendix \@ref(app:github-appendix) for link to code).  
