--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -47,7 +47,7 @@ Table: (\#tab:cohoCU2SP) Interior Fraser Coho Conservation Units (CUs) and assoc
 
 Hatchery enhancement has occurred, and continues to occur in some parts of the Interior Fraser Coho SMU. Two CUs are currently considered wild populations based on the criteria developed by @withlerGeneticallyBasedTargets2018 (i.e., do not have hatchery programs; strays from out-of-basin hatchery production are limited to <3% per year), while the other three are considered integrated-wild populations (i.e., with Proportionate Natural Influence (PNI) values most likely $\geq$ 0.72; M. Arbeider, pers. comm.). Within integrated-wild populations, most fish are considered 'wild' under the WSP with parents who were born in the natural environment. The Lower Thompson CU had higher levels of hatchery enhancement between 1998 and 2005, so would likely have been considered an integrated-transition population (0.5 $\leq$ PNI < 0.72) during this period.
 
-The five Interior Fraser Coho CUs have historically shown relatively high levels of covariation in escapement among CUs, with an average correlation in spawner abundances among CUS of 0.56. Similarity among CU responses to environmental and anthropogenic drivers is further supported by application of the four criteria proposed by Holt et al. (in review) to evaluate the extent to which status of data deficient CUs can be inferred from CUs with data. A summary of our consideration of these criteria for Interior Fraser Coho are provided in Appendix \@ref(app:coho-appendix)). Results showed that Interior Fraser Coho CUs have many shared characteristics. We found few significant indicators that would have prevented us from inferring CU status for one CU from neighboring CUs prior to our case study analyses.
+The five Interior Fraser Coho CUs have historically shown relatively high levels of covariation in escapement among CUs, with an average correlation in spawner abundances among CUS of 0.56. Similarity among CU responses to environmental and anthropogenic drivers is further supported by application of the four criteria proposed by Holt et al. (in review) to evaluate the extent to which status of data deficient CUs can be inferred from CUs with data. A summary of our consideration of these criteria for Interior Fraser Coho are provided in Appendix \@ref(app:coho-appendix). Results showed that Interior Fraser Coho CUs have many shared characteristics. We found few significant indicators that would have prevented us from inferring CU status for one CU from neighboring CUs prior to our case study analyses.
 
 Interior Fraser Coho is included in the first batch of major stocks proposed for regulation under the Fish Stock provisions of the revised Fisheries Act, necessitating the development of LRPs for this SMU.
 <!--KH: I have included this here to be consistent with WCVI chinook, but we should confirm at some point that this is publishable. Hopefully by the time this paper is published, batch 1 stocks will be prescribed .... -->
@@ -95,9 +95,14 @@ The third approach is based on the distribution of spawning escapement among sub
 
 Estimates of S~gen~ are required when assessing CU status using both the Pacific Salmon Status Scanner tool and the comparison of current CU-level abundance to S~gen~. While the application of the Salmon Scanner to Interior Fraser Coho CUs in Gottfried et al. (in prep) relies on peer-reviewed estimates of S~gen~ from the 2015 WSP Integrated Status Assessment [@dfoWildSalmonPolicy2015], we re-estimate S~gen~ here using data updated to 2020. In addition, we explore alternative stock recruitment model formulations to better understand how model assumptions at the CU-level affect resulting LRP estimates.
 
-Two different formulations of stock recruitment model were used to estimate S~gen~: (i) a base Ricker model, which includes a smolt-to-adult survival covariate, and (ii) a Ricker_priorCap model in which an informative prior distribution is used to increase S~REP~ compared to the base model. S~REP~ is the spawner abundance level at which the stock replaces itself; the relationship between S~REP~ and Ricker stock recruitment model parameters is shown below (Equation \@ref(eq:beta-Srep)). Both of these models have been previously developed and applied to Interior Fraser Coho CUs. The smolt-to-adult survival covariate used when fitting both models is a hatchery-based smolt-to-adult survival rate index.  The index is not CU-specific; the same index is applied to all CUs. A third Ricker model, in which both an informative prior on S~REP~ and depensatory mortality were included, was also used by @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020; however, we did not include it in our case study for simplicity. As noted by @kormanEvaluationFrameworkAssessing2019, there is no indication in available data of depensatory dynamics, and the SR model fit with depensatory mortality required a highly uncertain assumption about the escapement level at which recruitment is reduced to 50% of the value it would have been in the absence of depensatory mortality.  Furthermore, formal model selection criteria showed that adding depensatory mortality into models lead to a reduction in model fit [@kormanEvaluationFrameworkAssessing2019].
+Two different formulations of stock recruitment model were used to estimate S~gen~: (i) a base Ricker model, which includes a smolt-to-adult survival covariate, and (ii) a Ricker_priorCap model in which an informative prior distribution is used to increase S~REP~ compared to the base model. S~REP~ is the spawner abundance level at which the stock replaces itself; the relationship between S~REP~ and Ricker stock recruitment model parameters is shown below (Equation \@ref(eq:beta-Srep)). Both of these models have been previously developed and applied to Interior Fraser Coho CUs. The smolt-to-adult survival covariate used when fitting both models is a hatchery-based smolt-to-adult survival rate index. The index is not CU-specific; the same index is applied to all CUs. A third Ricker model, in which both an informative prior on S~REP~ and depensatory mortality were included, was also used by @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020; however, we did not include it in our case study for simplicity. As noted by @kormanEvaluationFrameworkAssessing2019, there is no indication in available data of depensatory dynamics, and the SR model fit with depensatory mortality required a highly uncertain assumption about the escapement level at which recruitment is reduced to 50% of the value it would have been in the absence of depensatory mortality.  Furthermore, formal model selection criteria showed that adding depensatory mortality into models lead to a reduction in model fit [@kormanEvaluationFrameworkAssessing2019].
 
-@kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020 used a hierarchical model structure for both the base Ricker and Ricker_priorCap models that assumed CU-level productivity parameters were sampled from a common, normal distribution shared by all CUs. Using formal model selection criteria (i.e., DIC), @kormanEvaluationFrameworkAssessing2019 found higher support for the hierarchical structure than when productivity parameters were assumed independent among CUs. However, our initial examination of the hierarchical approach applied to the updated data set lead us to select the independent CU approach for our evaluation. Firstly, we found that LRP estimates were sensitive to the assumed standard deviation on the hyper-distribution prior for the productivity parameter. Using the individual model approach removed prior influence on model results. Secondly, a logistic regression fit to status estimates obtained using the hierarchical model was unable to converge on a solution in several years between 2015 and 2020, including the most recent year (2020). Future stock recruitment analyses for Interior Fraser Coho may wish to re-visit the hierarchical approach to modelling intrinsic productivity. Bayesian posterior distributions of the productivity parameter from our individual model fits show that 95% credibility intervals overlap for all CUs, indicating that CU-level productivity was similar among CUs. However, we do not expect our decision to apply an individual modelling approach here will affect our general conclusions. In preliminary analyses, LRPs were similar between individual and hierarchical modelling approaches.
+
+@kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020 used a hierarchical model structure for both the base Ricker and Ricker_priorCap models that assumed CU-level productivity parameters were sampled from a common, normal distribution shared by all CUs. Using formal model selection criteria (i.e., DIC), @kormanEvaluationFrameworkAssessing2019 found higher support for the hierarchical structure than when productivity parameters were assumed independent among CUs. However, our initial examination of the hierarchical approach applied to the updated data set lead us to select the independent CU approach for our evaluation. Firstly, we found that LRP estimates were sensitive to the assumed standard deviation on the hyper-distribution prior for the productivity parameter. Using the individual model approach removed prior influence on model results. Secondly, a logistic regression fit to status estimates obtained using the hierarchical model was unable to converge on a solution in several years between 2015 and 2020, including the most recent year (2020). 
+
+
+Future stock recruitment analyses for Interior Fraser Coho may wish to re-visit the hierarchical approach to modelling productivity. Bayesian posterior distributions of the productivity parameter from our individual model fits show some differences in productivity among CUs [particulary for the Fraser Canyon CU; Appendix \@ref(app:coho-appendix)]. However, there was substantial overlap in CU-level distributions for all other CUs. We do not expect our decision to apply an individual modelling approach here will affect our general conclusions. In preliminary analyses, LRPs were similar between individual and hierarchical modelling approaches.
+
 
 The formulations for our two stock recruitment models using the assumption of independent productivity among CUs are described below. 
 
@@ -223,6 +228,7 @@ knitr::include_graphics("figure/coho-CU-EscpSeries-wMultiStatus-Ricker.png")
 knitr::include_graphics("figure/coho-CU-EscpSeries-wMultiStatus_Ricker_priorCap.png")
 ```
 
+\linebreak
 
 The frequency of years in which the IFCRT distributional target failed to be met for one or more CUs was similar to that seen when S~gen~ based on the Ricker_priorCap was used, with distributional targets not met in 4 of the 21 years between 2000 and 2020 (breached in 2006, 2015-2017). Eight of the 11 sub-populations had generational average escapement drop below the 1000 spawner threshold in one or more years (Figure \@ref(fig:coho-Subpop-timeseries)). Sub-populations tended to differ in which years they dropped below the 1000 spawner threshold, which meant that the distributional target of at least half of the subpopulations within each CU with greater than 1000 fish was more often met than not. All 11 subpopulations had generational average spawning abundances above 1000 spawners in 2020, indicating that the stock would be well above a proportional LRP based on the IFCRT-distributional target (Figure \@ref(fig:coho-Subpop-timeseries)).
 
